blueox (0.4.0)

  * Tornado upgrades for 2.4.1

-- Rhett Garber <rhettg@gmail.com>  Mon, 24 Dec 2012 14:01:00 -0700

blueox (0.3.1)

  * Fix client lib for reading log files.
  * Fix an issue with forwarding log events

-- Rhett Garber <rhettg@gmail.com>  Fri, 23 Nov 2012 10:06:00 -0700

blueox (0.3.0)

  * Convert to MsgPack format. Not backwards compatible.
  * Handle EINTR, raised by newer zmq versions.
  * Hooks for shutting BlueOx down, prevents hangs.
  * Change wire format to make timestamp a double

-- Rhett Garber <rhettg@gmail.com>  Wed, 17 Oct 2012 11:30:00 -0700

blueox (0.2.0)

  * Rename so as to have a unique pypi name.
  * Reduce CPU usage in oxd by avoiding full event decoding

-- Rhett Garber <rhettg@gmail.com>  Tue, 10 Apr 2012 14:10:00 -0700

ziggy (0.1.0)

  * Initial Release

-- Rhett Garber <rhettg@gmail.com>  Thu, 22 Mar 2012 15:53:00 -0700